# spin

./: Cargo.toml
crates/cloud-kv/: Cargo.toml
crates/cloud-kv/src/: lib.rs
crates/http/src/: config.rs
crates/key-value/: Cargo.toml
crates/key-value-sqlite/: Cargo.toml
crates/key-value-sqlite/src/: host_component.rs  lib.rs
crates/key-value/src/: cloud.rs  host_component.rs  lib.rs  sqlite.rs  table.rs
crates/sqlite-libsql/src/: lib.rs
crates/testing/src/: lib.rs
crates/trigger/: Cargo.toml
crates/trigger-http/src/: handler.rs  lib.rs  wagi.rs
crates/trigger/src/: cli.rs  lib.rs
examples/rust-key-value/: Cargo.toml
examples/rust-key-value/src/: lib.rs
sdk/rust/src/: key_value.rs
src/commands/: up.rs
tests/: integration.rs
tests/http/key-value/: Cargo.toml  spin.toml
tests/http/key-value/src/: lib.rs
wit/ephemeral/: key-value.wit
